HSEARCH-3420 Add --add-modules=java.se for WildFly tools with JDK11
This is necessary for JDK 11 build 22 due to
https://issues.jboss.org/browse/MODULES-372.

See also https://hibernate.atlassian.net/browse/HV-1640