@@ -2063,6 +2063,7 @@
                 </surefire.jvm.args.java-version.strict>
                 <arquillian.wildfly.jvm.args.java-version>
                     -Djdk.attach.allowAttachSelf=true
+                    --add-modules=java.se
                 </arquillian.wildfly.jvm.args.java-version>
                 <!-- Skip the OSGi and WildFly integration tests with JDK 11 -->
                 <failsafe.wildfly.skip>true</failsafe.wildfly.skip>
